update: fontconfig && office

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -21,12 +21,13 @@
   </match>
 
 <!-- Default font (no fc-match pattern) -->
+<!--
   <match>
     <edit mode="prepend" name="family">
       <string>Noto Sans</string>
     </edit>
   </match>
-
+-->
 <!-- Default font for the zh_CN locale (no fc-match pattern) -->
   <match>
     <test compare="contains" name="lang">
@@ -62,7 +63,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="same">
-      <string>Menlo</string>
+      <string>Noto Sans Mono</string>
     </edit>
   </match>
 
@@ -94,9 +95,11 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Sarasa Term SC</family>
-      <family>Sarasa Term TC</family>
-      <family>Sarasa Term J</family>
+      <family>Noto Sans Mono</family>
+      <family>Noto Sans Mono CJK SC</family>
+      <family>Noto Sans Mono CJK TC</family>
+      <family>Noto Sans Mono CJK JP</family>
+      <family>Noto Sans Mono CJK KR</family>
       <family>Noto Color Emoji</family>
       <family>Noto Emoji</family>
     </prefer>
