--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,7 +29,6 @@ font pango:monospace 12
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id "xidlehook --not-when-audio --not-when-fullscreen --timer 300 'i3exit lock' '' &"
 
-
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
@@ -50,7 +49,7 @@ exec --no-startup-id qv2ray
 # Background
 exec_always --no-startup-id sh ~/.fehbg
 # exec --no-startup-id settimed /usr/share/backgrounds/archlinux/archlinux.stw
-exec_always --no-startup-id compton
+exec_always --no-startup-id picom
 
 # Screenshot config
 bindsym Print --release exec --no-startup-id flameshot gui
@@ -278,10 +277,12 @@ for_window [class="Pavucontrol"] floating enable
 for_window [class="Kite"] floating enable
 for_window [class="polychromatic-controller"] floating enable
 for_window [class="Nm-connection-editor"] floating enable
+
 for_window [title="Welcome to PyCharm"] floating enable
 
+
 # Assign
+assign [class="libreoffice-*"] $ws1
 assign [class="Chromium"] $ws2
 assign [class="Code"] $ws3
 assign [class="TelegramDesktop"] $ws6
-
