--- a/.config/i3/config
+++ b/.config/i3/config
@@ -74,7 +74,7 @@ bindsym $mod+Shift+q kill
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 bindcode $mod+40 exec rofi -show drun
-bindsym $mod+Tab exec rofi -show run
+bindsym $mod+Tab exec rofi -show window
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -265,7 +265,7 @@ gaps outer 6
 
 # Software
 bindsym $mod+Shift+g exec chromium
-bindsym $mod+Shift+f exec i3-sensible-terminal -e ranger
+bindsym $mod+Shift+f exec pcmanfm
 
 # Floating
 for_window [window_role="pop-up"] floating enable
@@ -282,7 +282,10 @@ for_window [title="Welcome to PyCharm"] floating enable
 
 
 # Assign
+assign [class="Pcmanfm"] $ws1
+assign [class="Xarchiver"] $ws1
 assign [class="libreoffice-*"] $ws1
 assign [class="Chromium"] $ws2
 assign [class="Code"] $ws3
+assign [class="Thunderbird"] $ws4
 assign [class="TelegramDesktop"] $ws6
